@@ -48,6 +48,17 @@ IF(EXISTS ${CMAKE_SOURCE_DIR}/cmake-fedora/Modules)
     ENDIF(NOT EXISTS ${CMAKE_SOURCE_DIR}/Modules)
 ENDIF(EXISTS ${CMAKE_SOURCE_DIR}/cmake-fedora/Modules)
 
+# Use standard FHS if Fedora build is not enabled
+IF(NOT CMAKE_FEDORA_ENABLE_FEDORA_BUILD)
+    IF(CMAKE_SYSTEM_PROCESSOR MATCHES "64")
+	SET(LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib64" CACHE PATH "Library dir")
+    ELSE(CMAKE_SYSTEM_PROCESSOR MATCHES "64")
+	SET(LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib" CACHE PATH "Library dir")
+    ENDIF(CMAKE_SYSTEM_PROCESSOR MATCHES "64")
+    SET(LIBEXEC_DIR "${LIB_DIR}" CACHE PATH "LIBEXEC dir")
+    MESSAGE("*Hi")
+ENDIF(NOT CMAKE_FEDORA_ENABLE_FEDORA_BUILD)
+
 INCLUDE(ManageEnvironment RESULT_VARIABLE MANAGE_ENVIRONMENT_PATH)
 IF(MANAGE_ENVIRONMENT_PATH STREQUAL "NOTFOUND")
     MESSAGE(FATAL_ERROR "ManageEnvironment is not found in CMAKE_MODULE_PATH,
