@@ -1,5 +1,5 @@
-PRJ_VER=1.4.1
-SUMMARY=Fixed RHBZ 713033,745371; GitHub 7,20,21,25,27; Google Issue 1426, 1428, 1481, 1490
+PRJ_VER=1.4.2
+SUMMARY=Fixed RHBZ 713033,745371; GitHub 7,20,21,25,27; Google Issue 1172, 1426, 1428, 1481, 1490
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=713033,745371
 [Changes]
@@ -13,6 +13,7 @@ REDHAT_BUGZILLA=713033,745371
 - Fixed GitHub issue #27: Local path committed into tree
 - Fixed: Bug 713033 -  [zh_TW] ibus-chewing problem
 - Fixed: Bug 745371 -  ibus-chewing: mode confusion In Temporary English mode and Chinese mode later on
+- Fixed: Google Issue 1172: [ibus-chewing] move elf file to standard directory.
 - Fixed: Google Issue 1426: ibus-chewing-1.3.10 installs directory /gconf to root filesystem
 - Fixed: Google Issue 1428: ibus-chewing-1.3.10 fails to save it's settings
 - Fixed: Google Issue 1481: Some characters are missing when a long string in preedit buffer.
